# final-book-writing-hackathon

./: .gitignore  README.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
book-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
book-site/docs/module-1/: _category_.json  architecture.md  chapter-1.md  chapter-2.md  chapter-3.md  chapter-4.md  chapter-5.md  chapter-6.md  communication.md  controllers.md  index.md  launch.md  packages.md  urdf.md
book-site/docs/module-2/: README.md  _category_.json  index.md
book-site/docs/module-2-digital-twin/: assessment-rubric.md  chapter-template-detailed.md  chapter-template.md  code-formatting-standards.md  file-naming-conventions.md  glossary.md  index.md  resources.md  troubleshooting-template.md
book-site/docs/module-2-digital-twin/01-digital-twin-overview/: index.md  specification.md
book-site/docs/module-2-digital-twin/02-gazebo-simulation-basics/: checklist.md  code-examples.md  concise-content.md  exercise.md  index.md  learning-objectives.md  specification.md  steps.md  troubleshooting.md  tutorial-launch-world.md  worked-example.md
book-site/docs/module-2-digital-twin/03-unity-robotics-integration/: index.md  specification.md  steps-visualization.md  (+1 more)
book-site/docs/module-3/: Isaac ROS Perception.md  Isaac Sim Introduction.md  Sim-to-Real Transfer.md  Synthetic Data Generation.md  Visual SLAM & Navigation.md  _category_.json  index.md
book-site/docs/module-4/: _category_.json  autonomous-task-execution.md  capstone-integration.md  index.md  multi-modal-perception.md  nl-to-ros2-actions.md  voice-to-intent.md
book-site/src/css/: custom.css
book-site/src/pages/: index.module.css  index.tsx
book-site/src/types/: module.ts
book-site/static/examples/: controllers.yaml  empty_world.sdf  simple_robot.sdf
digital_twin_ws/: setup_workspace.sh
digital_twin_ws/src/digital_twin_control/: CMakeLists.txt  package.xml
digital_twin_ws/src/digital_twin_control/config/: controllers.yaml
digital_twin_ws/src/digital_twin_description/: CMakeLists.txt  package.xml
digital_twin_ws/src/digital_twin_examples/: CMakeLists.txt  basic_simulation_test.py  calibration_tool.py  package.xml  performance_benchmark.py  physics_demo.py  sensor_verification.py  test_suite.py  unity_bridge_demo.py
digital_twin_ws/src/digital_twin_gazebo/: CMakeLists.txt  package.xml
digital_twin_ws/src/digital_twin_gazebo/config/: performance.yaml  physics.yaml
digital_twin_ws/src/digital_twin_gazebo/launch/: digital_twin_complete.launch.py  empty_world.launch.py  spawn_robot.launch.py
digital_twin_ws/src/digital_twin_gazebo/worlds/: digital_twin_world.world
digital_twin_ws/src/digital_twin_sensors/: CMakeLists.txt  package.xml
digital_twin_ws/src/digital_twin_sensors/config/: sensors.yaml
history/prompts/001-docusaurus-book-layout/: 003-physical-ai-architecture-plan.plan.prompt.md  004-generate-implementation-tasks.tasks.prompt.md  005-complete-implementation.green.prompt.md  006-scope-expansion-module-content.misc.prompt.md  007-module-1-chapter-structure-update.tasks.prompt.md
history/prompts/002-module-1-ros2-content/: 001-clarify-module-scope-for-modules-2-3-4.spec.prompt.md  001-create-module-1-spec.spec.prompt.md  001-generate-task-list-for-module-1-4-ros-2-content.tasks.prompt.md  002-implementation-plan-for-modules-1-4-ros-2-content.plan.prompt.md  002-remove-module-2-4-outlines.spec.prompt.md  003-create-module-2-spec.spec.prompt.md  003-generated-tasks-for-modules-1-4-ros-2-content.tasks.prompt.md  004-create-module-3-spec.spec.prompt.md  005-create-module-4-spec.spec.prompt.md  009-generate-initial-impl-plan.plan.prompt.md  010-simplify-chapter-naming.tasks.prompt.md
history/prompts/constitution/: 001-create-robotics-textbook-constitution.constitution.prompt.md
history/prompts/digital-twin/: 1-create-digital-twin-spec.spec.prompt.md  2-digital-twin-clarification.spec.prompt.md  2-generate-module-tasks.tasks.prompt.md  3-digital-twin-planning.plan.prompt.md  4-digital-twin-tasks.tasks.prompt.md
history/prompts/docusaurus-book-layout/: 001-create-book-layout-spec.spec.prompt.md  002-clarify-deployment-strategy.misc.prompt.md
history/prompts/general/: 1-digital-twin-specification.spec.prompt.md
history/prompts/isaac-sim/: 001-isaac-sim-tasks-generation.tasks.prompt.md  002-isaac-sim-implementation-progress.green.prompt.md
history/prompts/vla-module/: VLA-Module-Plan.prompt.md  VLA-Module-Spec-New.prompt.md  VLA-Module-Spec.prompt.md  VLA-Module-Tasks.prompt.md
specs/001-digital-twin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-digital-twin/checklists/: requirements.md
specs/001-digital-twin/contracts/: ros2_interfaces.md
specs/001-docusaurus-book-layout/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-docusaurus-book-layout/checklists/: requirements.md
specs/001-docusaurus-book-layout/contracts/: modules-schema.json  modules.json
specs/002-isaac-sim/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-isaac-sim/checklists/: requirements.md
specs/002-module-1-ros2-content/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks-sidebar-update.md  tasks.md
specs/002-module-1-ros2-content/checklists/: requirements.md
specs/002-module-1-ros2-content/contracts/: content-structure-contract.md
specs/004-vla-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-vla-module/checklists/: requirements.md
specs/004-vla-module/contracts/: voice-processing-api.yaml
(+18 files in other folders)
